welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:28: error: overloaded method value to with alternatives:
  (end: Int,step: Int)scala.collection.immutable.Range.Inclusive <and>
  (end: Int)scala.collection.immutable.Range.Inclusive
 cannot be applied to ()
    for(i<-1 to ()){
             ^